# isotalent

./: CMakeLists.txt  isotalent.sln
isotalent/: Map.h  Pathfinder.cpp  main.cpp
src/: Map.cpp  Pathfinder.h  README.txt  isotalent.vcxproj  isotalent.vcxproj.filters  main.cpp
